--- a/style.css
+++ b/style.css
@@ -93,32 +93,45 @@ button:hover {
   margin: 10px;
 }
 
-/* สไตล์สำหรับปุ่ม toggle-log */
-#toggle-log {
-  margin: 10px;
-  padding: 10px 20px;
-  font-size: 16px;
-  background: #000000;
+#pile .card.bot {
+  background: #333;
   color: #fff;
-  border: solid;
+  text-align: center;
+  font-size: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.modal-content {
+  background-color: rgb(255, 255, 255);
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
   border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
   cursor: pointer;
-}
-
-#toggle-log:hover {
-  background: #ffffff;
-  color: #000;
-  border: solid #000000;
-}
-
-/* สไตล์สำหรับส่วนประวัติการเล่น */
-#log {
-  margin-top: 20px;
-  padding: 10px;
-  background: #eee;
-  border-radius: 5px;
-  overflow-y: auto;
-  max-height: 150px;
-  text-align: left;
-  display: none; /* ซ่อนโดยค่าเริ่มต้น */
 }
